# self-consumption-control

./: .cursor-architecture  .cursorrules  PROJECT_STATUS.md  README.md  analysis.py  async_monitor.py  automation_example.py  config.yaml  debug_influxdb_pusher.py  flux_verification_queries.flux  influxdb-pusher.service  influxdb_config.yaml  influxdb_pusher.py  live_monitor.py  main.py  modbus_client.py  monitor.py  pyproject.toml  simple_live_monitor.py  sungrow-ha-registers.yaml  sungrow_controller.py  telemetry.py  telemetry_demo.py  telemetry_log.json  test_modbus.py  test_solar_power.py  ui_renderer.py
